syntax ="proto3";
option go_package="./;proto";

service Greeter{
  rpc GetStream(StreamReqData) returns (stream StreamResData);
  rpc PutStream(stream StreamReqData) returns ( StreamResData);
  rpc AllStream(stream StreamReqData) returns (stream  StreamResData);//双向流模式
}

message StreamResData{
  string data =1;//服务端发送出去的数据
}
message StreamReqData{
  string data =1;//客户端发送出去的数据
}